--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-DB_URI="mongodb://localhost:27017/Ecommerce"
+DB_URI="mongodb+srv://asadlukman246:LIKDqLwFSRduMu3W@cluster0.aezmvdu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 secret="8433098683"
 expireTime="5d"
 cookie_expire="5"
