added send email functiolity

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_URI="mongodb+srv://asadlukman246:LIKDqLwFSRduMu3W@cluster0.aezmvdu.mongodb.ne
 secret="8433098683"
 expireTime="5d"
 cookie_expire="5"
+EMAIL_USERNAME="asadlukman246@gmail.com"
+EMAIL_PASSWORD="wazl npxf nhyf aial"
