--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "twilio": "^5.3.6",
     "validator": "^13.12.0"
   },
   "devDependencies": {
