--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
