--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.14",
+    "papaparse": "^5.5.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "twilio": "^5.3.6",
