--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "papaparse": "^5.5.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1",
     "twilio": "^5.3.6",
     "validator": "^13.12.0"
   },
