--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 /.env
 /controller/sendGridController.js
 /EmailContentThird.js 
+1.png
+2.png
+22SEP.json
+EmailContent.js
+EmailContentSecond.js
+EmailData.json
+PropertyData.json
+sendGridFile.js
+SendImageEmail.js
