change file and folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 /node_modules
 /.env
-/controller/sendGridController.js
-/EmailContentThird.js 
-1.png
-2.png
-22SEP.json
-EmailContent.js
-EmailContentSecond.js
-EmailData.json
-PropertyData.json
-sendGridFile.js
-SendImageEmail.js
+src/22SEP.json
+src/EmailContent.js
+src/EmailContentSecond.js
+src/EmailData.json
+src/PropertyData.json
+src/sendGridFile.js
+src/SendImageEmail.js
