--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
@@ -19,6 +19,7 @@
     "papaparse": "^5.5.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "resend": "^6.1.3",
     "socket.io": "^4.8.1",
     "twilio": "^5.3.6",
     "validator": "^13.12.0"
