--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
-  },
+ "scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node src/index.js",
+  "dev": "nodemon src/index.js"
+},
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.7",
