--- a/package.json
+++ b/package.json
@@ -3,28 +3,29 @@
   "test": "echo \"Error: no test specified\" && exit 1",
   "start": "node src/index.js",
   "dev": "nodemon src/index.js"
-},
-  "dependencies": {
-    "@sendgrid/mail": "^8.1.4",
-    "axios": "^1.7.7",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1",
-    "nodemailer": "^6.9.14",
-    "papaparse": "^5.5.2",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "resend": "^6.1.3",
-    "socket.io": "^4.8.1",
-    "twilio": "^5.3.6",
-    "validator": "^13.12.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.3"
-  }
+ },
+ "dependencies": {
+  "@google/generative-ai": "^0.24.1",
+  "@sendgrid/mail": "^8.1.4",
+  "axios": "^1.7.7",
+  "bcryptjs": "^2.4.3",
+  "body-parser": "^1.20.2",
+  "cookie-parser": "^1.4.6",
+  "cors": "^2.8.5",
+  "dotenv": "^16.4.5",
+  "express": "^4.19.2",
+  "jsonwebtoken": "^9.0.2",
+  "mongoose": "^8.4.1",
+  "nodemailer": "^6.9.14",
+  "papaparse": "^5.5.2",
+  "passport": "^0.7.0",
+  "passport-google-oauth20": "^2.0.0",
+  "resend": "^6.1.3",
+  "socket.io": "^4.8.1",
+  "twilio": "^5.3.6",
+  "validator": "^13.12.0"
+ },
+ "devDependencies": {
+  "nodemon": "^3.1.3"
+ }
 }
